--- a/src/app/pages/student/profile/account-and-security/account-and-security.component.html
+++ b/src/app/pages/student/profile/account-and-security/account-and-security.component.html
@@ -65,6 +65,20 @@
       <ion-icon name="chevron-forward" slot="end" class="text-base"></ion-icon>
     </ion-item>
 
+    <!--  Cho phép đăng nhập bằng biometric  -->
+    <ion-item detail="false" *ngIf="biometricAvailable?.isAvailable">
+      <ion-icon name="finger-print" slot="start" color="primary" class="text-xl"></ion-icon>
+      <ion-label class="py-2">
+        {{ TranslateKeys.TITLE_LOGIN_BY_BIOMETRIC | translate }}<br>
+        <span class="text-sm text-gray-500 italic dark:text-gray-400">
+          {{ (enableBiometric ? TranslateKeys.TITLE_ON : TranslateKeys.TITLE_OFF) | translate }}
+        </span>
+      </ion-label>
+      <ion-toggle mode="ios" slot="end" [enableOnOffLabels]="true"
+                  [checked]="enableBiometric" (ionChange)="toggleBiometric($event)">
+      </ion-toggle>
+    </ion-item>
+
     <!--  Đổi mật khẩu  -->
     <ion-item detail="false" lines="none" routerLink="/{{PageRoutes.PROFILE}}/{{PageRoutes.CHANGE_PASSWORD}}">
       <ion-icon name="key" slot="start" color="primary" class="text-xl"></ion-icon>
