--- a/src/app/shared/components/pin-verify-modal/pin-verify-modal.component.html
+++ b/src/app/shared/components/pin-verify-modal/pin-verify-modal.component.html
@@ -8,30 +8,30 @@
   <div class="flex gap-4 mb-14 justify-center" [ngClass]="{ 'shake': isError }">
     <div *ngFor="let dot of dots; let i = index"
          class="w-4 h-4 rounded-full border-2"
-         [ngClass]="{'border-[0px] bg-blue-500': i < pin.length, 'border-blue-500': i >= pin.length}">
+         [ngClass]="{'border-none bg-blue-500': i < pin.length, 'border-blue-500': i >= pin.length}">
     </div>
   </div>
 
   <!-- Number pad -->
   <div class="grid grid-cols-3 gap-5 justify-center text-2xl font-light">
     <ng-container *ngFor="let num of numberPad">
-      <div class="ios-button" (pointerdown)="inputDigit(num)">
+      <div class="ios-button" (pointerdown)="inputDigit(num)" [appSoundClick]="true">
         {{ num }}
       </div>
     </ng-container>
 
     <!-- Cancel button -->
-    <div class="ios-button cancel-button" (pointerdown)="cancel()">
-      <ion-icon name="arrow-back-circle-outline"></ion-icon>
+    <div class="ios-button" (pointerdown)="cancel()" [appSoundClick]="true">
+      <ion-icon name="arrow-undo"></ion-icon>
     </div>
 
     <!-- 0 button -->
-    <div class="ios-button" (pointerdown)="inputDigit('0')">
+    <div class="ios-button" (pointerdown)="inputDigit('0')" [appSoundClick]="true">
       0
     </div>
 
     <!-- Backspace button -->
-    <div class="ios-button" (pointerdown)="removeDigit()">
+    <div class="ios-button" (pointerdown)="removeDigit()" [appSoundClick]="true">
       <ion-icon name="backspace-outline"></ion-icon>
     </div>
   </div>
