--- a/src/app/shared/components/pin-setup-modal/pin-setup-modal.component.html
+++ b/src/app/shared/components/pin-setup-modal/pin-setup-modal.component.html
@@ -15,23 +15,23 @@
   <!-- Number pad -->
   <div class="grid grid-cols-3 gap-5 justify-center text-2xl font-light">
     <ng-container *ngFor="let num of numberPad">
-      <div class="ios-button" (pointerdown)="inputDigit(num)">
+      <div class="ios-button" (pointerdown)="inputDigit(num)" [appSoundClick]="true">
         {{ num }}
       </div>
     </ng-container>
 
     <!-- Cancel button -->
-    <div class="ios-button cancel-button" (pointerdown)="cancel()">
-      <ion-icon name="arrow-back-circle-outline"></ion-icon>
+    <div class="ios-button cancel-button" (pointerdown)="cancel()" [appSoundClick]="true">
+      <ion-icon name="arrow-undo"></ion-icon>
     </div>
 
     <!-- 0 button -->
-    <div class="ios-button" (pointerdown)="inputDigit('0')">
+    <div class="ios-button" (pointerdown)="inputDigit('0')" [appSoundClick]="true">
       0
     </div>
 
     <!-- Backspace button -->
-    <div class="ios-button" (pointerdown)="removeDigit()">
+    <div class="ios-button" (pointerdown)="removeDigit()" [appSoundClick]="true">
       <ion-icon name="backspace-outline"></ion-icon>
     </div>
   </div>
