--- a/src/app/pages/social-network/friends/friends.page.html
+++ b/src/app/pages/social-network/friends/friends.page.html
@@ -1,11 +1,11 @@
 <ion-header class="ion-no-border bg-gradient-to-r from-[#0a1f5c] to-[#4a2a8c]">
-  <div class="relative flex flex-col justify-end h-50 px-4 py-5">
+  <div class="relative flex flex-col justify-end h-190 px-4 py-5">
     <div class="absolute flex justify-center items-center z-0 top-12 right-4 w-24 h-20">
       <div class="character-image">
         <img src="assets/images/owl_img.png" alt="Owl character" />
       </div>
     </div>
-    <ion-buttons slot="start">
+    <ion-buttons class="absolute top-4 left-4 z-10" slot="start">
       <ion-back-button text="" color="white" defaultHref="/{{PageRoutes.HOME}}"></ion-back-button>
     </ion-buttons>
     <h1 class="m-0 mt-8 px-4 text-2xl font-semibold text-white">Bạn bè</h1>
@@ -33,7 +33,8 @@
           lines="none"
           detail="false"
           class="w-full mb-1 border-b border-gray-200"
-          style="--background: transparent; --border-radius: 0; --padding-start: 8px; --padding-end: 8px; --inner-padding-end: 8px; --min-height: 60px; ">
+          style="--background: transparent; --border-radius: 0; --padding-start: 8px; --padding-end: 8px; --inner-padding-end: 8px; --min-height: 60px; "
+          [routerLink]="['/' + PageRoutes.FRIENDS + '/' + PageRoutes.FRIEND_DETAIL, friend.id]">
           <ion-avatar slot="start" class="w-[42px] h-[42px] mr-2.5">
             <div class="w-full h-full overflow-hidden rounded-full border-2 border-blue-500">
               <img [src]="friend.avatar" alt="Friend avatar" class="object-cover w-full h-full" onerror="this.src='assets/icons/svg/avatar.svg'" />
