--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,14 +1,25 @@
 <ion-footer *ngIf="!isKeyboardShowing">
-  <ion-toolbar class="flex items-center h-16 bg-white border-t border-gray-200">
-    <div class="flex justify-around items-center h-full">
-      <a [routerLink]="'/' + PageRoutes.HOME" routerLinkActive="active" class="flex flex-col items-center justify-center text-gray-500 text-xs">
-        <ion-icon name="home" class="text-2xl mb-1" [color]="isActive('/' + PageRoutes.HOME) ? 'primary' : ''"></ion-icon>
-        <span [class.text-blue-500]="isActive('/' + PageRoutes.HOME)">{{ TranslateKeys.TITLE_HOME | translate }}</span>
+  <ion-toolbar class="flex items-center h-auto bg-white border-t border-gray-200">
+    <div class="flex justify-between items-center h-full py-2 ion-padding-start ion-padding-end">
+      <a [routerLink]="'/' + PageRoutes.HOME" routerLinkActive="active" class="flex flex-col items-center justify-center text-gray-500">
+        <ion-img src="/assets/icons/footer/home-icon.png" class="w-8 h-8"></ion-img>
+        <span class="pt-1" [class.text-blue-500]="isActive(PageRoutes.HOME)">{{ TranslateKeys.TITLE_HOME | translate }}</span>
       </a>
-
-      <a [routerLink]="'/' + PageRoutes.PROFILE" routerLinkActive="active" class="flex flex-col items-center justify-center text-gray-500 text-xs">
-        <ion-icon name="person" class="text-2xl mb-1" [color]="isActive('/' + PageRoutes.PROFILE) ? 'primary' : ''"></ion-icon>
-        <span [class.text-blue-500]="isActive('/' + PageRoutes.PROFILE)">{{ TranslateKeys.TITLE_PROFILE | translate }}</span>
+      <a [routerLink]="'/' + PageRoutes.CHATBOT" routerLinkActive="active" class="flex flex-col items-center justify-center text-gray-500">
+        <ion-img src="/assets/icons/footer/icon-chatbot.png" class="w-8 h-8"></ion-img>
+        <span class="pt-1" [class.text-blue-500]="isActive(PageRoutes.CHATBOT)">{{ TranslateKeys.TITLE_CHATBOT | translate }}</span>
+      </a>
+      <a [routerLink]="'/' + PageRoutes.RANK" routerLinkActive="active" class="flex flex-col items-center justify-center text-gray-500">
+        <ion-img src="/assets/icons/footer/rank-icon.png" class="w-8 h-8"></ion-img>
+        <span class="pt-1" [class.text-blue-500]="isActive(PageRoutes.RANK)">{{ TranslateKeys.TITLE_RANK | translate }}</span>
+      </a>
+      <a [routerLink]="'/' + PageRoutes.FRIENDS" routerLinkActive="active" class="flex flex-col items-center justify-center text-gray-500" *ngIf="userRole === UserRoles.STUDENT">
+        <ion-img src="/assets/icons/footer/friends-icon.png" class="w-8 h-8"></ion-img>
+        <span class="pt-1" [class.text-blue-500]="isActive(PageRoutes.FRIENDS)">{{ TranslateKeys.TITLE_FRIENDS | translate }}</span>
+      </a>
+      <a [routerLink]="'/' + PageRoutes.PROFILE" routerLinkActive="active" class="flex flex-col items-center justify-center text-gray-500">
+        <ion-img src="/assets/icons/footer/icon-other.png" class="w-8 h-8"></ion-img>
+        <span class="pt-1" [class.text-blue-500]="isActive(PageRoutes.PROFILE)">{{ TranslateKeys.TITLE_MENU | translate }}</span>
       </a>
     </div>
   </ion-toolbar>
