--- a/src/app/pages/student/friends/friends.page.scss
+++ b/src/app/pages/student/friends/friends.page.scss
@@ -1,4 +1,13 @@
 // Custom styles for friend page
+ion-item.friend-item {
+  --background: transparent;
+  --border-radius: 0;
+  --padding-start: 8px;
+  --padding-end: 8px;
+  --inner-padding-end: 8px;
+  --min-height: 60px;
+}
+
 ion-img.banner-img {
   animation: float 3s ease-in-out infinite;
 }
