fix(detail-student-friend): Resolve conflict, fix style and layout

--- a/src/app/pages/student/friends/friend-detail/friend-detail.component.html
+++ b/src/app/pages/student/friends/friend-detail/friend-detail.component.html
@@ -1,72 +1,61 @@
-<ion-header class="ion-no-border bg-gradient-to-r from-[#0a1f5c] to-[#4a2a8c]">
-  <div class="relative flex flex-col justify-end h-190 px-4 py-5">
-    <ion-buttons class="absolute top-4 left-4 z-10">
-      <ion-back-button text="" color="white" defaultHref="/{{PageRoutes.FRIENDS}}"></ion-back-button>
-    </ion-buttons>
-    <div class="absolute flex justify-center items-center z-0 top-12 right-4 w-24 h-20">
-      <div class="banner-img">
-        <ion-img src="assets/images/owl_img.png" alt="Owl character"></ion-img>
-      </div>
-    </div>
-  </div>
-
+<ion-header>
+  <ion-buttons class="absolute top-4 left-4 z-10">
+    <ion-back-button text="" color="white" defaultHref="/{{PageRoutes.FRIENDS}}"></ion-back-button>
+  </ion-buttons>
 </ion-header>
 
-<ion-content>
-  <div class="bg-white h-full p-4 pt-16">
-    <div class="flex gap-3 ">
-      <div class="w-1/2">
-        <div class="flex justify-center items-center">
-          <ion-avatar class="w-32 h-32">
-            <ion-img [src]="friend?.avatar" [alt]="friend?.name"></ion-img>
-          </ion-avatar>
-        </div>
-        <div class="text-center text-gray-800 font-bold text-lg text-green-800 italic mt-2">{{friend?.name}}</div>
-      </div>
-      <div class="w-1/2 flex flex-col gap-2">
-        <div class="rounded-lg border border-gray-300  shadow-sm">
-          <div class="flex items-center p-4 px-4 gap-1">
-            <ion-icon name="ribbon" class="text-3xl text-orange-500"></ion-icon>
-            <div>
-              <div class="text-xl font-bold text-green-500 leading-none">{{friend?.achievements}}</div>
-              <div class="text-sm text-gray-500 font-semibold leading-none">{{ TranslateKeys.TITLE_BADGES | translate }}</div>
+<ion-content [fullscreen]="true">
+  <div class="flex items-center justify-center w-full h-full">
+    <div class="block w-full h-auto ion-padding-start ion-padding-end">
+      <ion-row>
+        <ion-col size="6" class="ion-text-center m-auto">
+          <ion-img [src]="friend?.avatar" [alt]="friend?.name" class="w-full h-auto"></ion-img>
+          <p class="text-center font-bold text-lg text-teal-500 italic mt-2">{{ friend?.name }}</p>
+        </ion-col>
+        <ion-col size="6" class="my-auto">
+          <div class="mb-3 rounded-lg border border-gray-300 shadow-sm">
+            <div class="flex items-center p-4 px-4 gap-1">
+              <ion-icon name="ribbon" class="text-3xl text-orange-500"></ion-icon>
+              <div>
+                <div class="text-xl font-bold text-green-500 leading-none">{{ friend?.achievements }}</div>
+                <div class="text-sm text-gray-500 font-semibold leading-none">{{ TranslateKeys.TITLE_BADGES | translate }}</div>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="rounded-lg border border-gray-300  shadow-sm">
-          <div class="flex items-center p-4 px-4 gap-1">
-            <ion-icon name="podium" class="text-3xl text-blue-500"></ion-icon>
-            <div>
-              <div class="text-xl font-bold text-green-500 leading-none">{{friend?.rank}}</div>
-              <div class="text-sm text-gray-500 font-semibold leading-none">{{ TranslateKeys.TITLE_RANK | translate }}</div>
+          <div class="mb-3 rounded-lg border border-gray-300  shadow-sm">
+            <div class="flex items-center p-4 px-4 gap-1">
+              <ion-icon name="podium" class="text-3xl text-blue-500"></ion-icon>
+              <div>
+                <div class="text-xl font-bold text-green-500 leading-none">{{ friend?.rank }}</div>
+                <div class="text-sm text-gray-500 font-semibold leading-none">{{ TranslateKeys.TITLE_RANK | translate }}</div>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="rounded-lg border border-gray-300  shadow-sm">
-          <div class="flex items-center p-4 px-4 gap-1">
-            <ion-icon name="flash" class="text-3xl text-yellow-500"></ion-icon>
-            <div>
-              <div class="text-xl font-bold text-green-500 leading-none">{{friend?.friendshipLevel}}</div>
-              <div class="text-sm text-gray-500 font-semibold leading-none">{{ TranslateKeys.TITLE_MISSIONS | translate }}</div>
+          <div class="mb-3 rounded-lg border border-gray-300  shadow-sm">
+            <div class="flex items-center p-4 px-4 gap-1">
+              <ion-icon name="flash" class="text-3xl text-yellow-500"></ion-icon>
+              <div>
+                <div class="text-xl font-bold text-green-500 leading-none">{{ friend?.friendshipLevel }}</div>
+                <div class="text-sm text-gray-500 font-semibold leading-none">{{ TranslateKeys.TITLE_MISSIONS | translate }}</div>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="rounded-lg border border-gray-300  shadow-sm">
-          <div class="flex items-center p-4 px-4 gap-1">
-            <ion-icon name="heart" class="text-3xl text-red-500"></ion-icon>
-            <div>
-              <div class="text-xl font-bold text-green-500 leading-none">{{friend?.likeCount}}</div>
-              <div class="text-sm text-gray-500 font-semibold leading-none">{{ TranslateKeys.TITLE_FRIENDLY | translate }}</div>
+          <div class="mb-3 rounded-lg border border-gray-300  shadow-sm">
+            <div class="flex items-center p-4 px-4 gap-1">
+              <ion-icon name="heart" class="text-3xl text-red-500"></ion-icon>
+              <div>
+                <div class="text-xl font-bold text-green-500 leading-none">{{ friend?.likeCount }}</div>
+                <div class="text-sm text-gray-500 font-semibold leading-none">{{ TranslateKeys.TITLE_FRIENDLY | translate }}</div>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
+        </ion-col>
+        <ion-col size="12" class="mt-5 ion-text-center">
+          <ion-button color="danger" class="w-3/5 uppercase" (click)="unfriend()">
+            {{ TranslateKeys.TITLE_UNFRIEND | translate }}
+          </ion-button>
+        </ion-col>
+      </ion-row>
     </div>
-    <ion-button expand="block" color="danger" class="h-8 mx-24 text-sm font-semibold uppercase mt-12"
-      style="--border-radius: 8px;" (click)="unfriend()">
-      {{ TranslateKeys.TITLE_UNFRIEND | translate }}
-    </ion-button>
   </div>
 </ion-content>
-
-<app-footer></app-footer>
